2025-08-19  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/tui/tui.el (tui-recentf, tui-switch-project): Redirect
	error messages to stderr.

2025-08-18  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/good-doc.el (good-doc--local-docs): Fix infinite loop.

2025-08-18  Zhengyi Fu  <i@fuzy.me>

	* init.el (quilt-list-files): New command.

2025-08-17  Zhengyi Fu  <i@fuzy.me>

	* early-init.el (custom-file): Change to custom.el.zst.

2025-08-17  Zhengyi Fu  <i@fuzy.me>

	* init.el (tool-map): Bind "p" to `tui-switch-project'.

2025-08-17  Zhengyi Fu  <i@fuzy.me>

	* init.el (recentf-save-file, save-place-file)
	(project-list-file, savehist-file): Use zstd to compress the
	files.

2025-08-17  Zhengyi Fu  <i@fuzy.me>

	* init.el (dotemacs-theme-refresh): Force `tab-line-tab-current'
	and `tab-line-tab-inactive' to use white foreground when in dark
	background mode.

2025-08-16  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el (gptel-backend, gptel-model): Set to
	use deepseek-chat.

2025-08-16  Zhengyi Fu  <i@fuzy.me>

	* packages.el (eat): Fork it.

2025-08-16  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/tui/tui.el (tui-switch-project): New command.
	(tui--project-callback): New function.

2025-08-16  Zhengyi Fu  <i@fuzy.me>

	* scripts/claude: Add --.

2025-08-16  Zhengyi Fu  <i@fuzy.me>

	* packages.el (ws-butler): Use lewang's GitHub repo instead of
	nongnu-elpa while nongnu-elpa is down.

2025-08-16  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/eshell-extras.el (eshell/rg): Disable heading so that
	`grep-mode' can parse the output.

2025-08-16  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/tui/tui.el (tui-rg): Add --no-heading to rg args.

2025-08-15  Zhengyi Fu  <i@fuzy.me>

	Update gptel-config.el

	* site-lisp/gptel-config.el ("Moonshot"): Update backend definition.
	($websearch): Change category to "internal".
	(kimi-agent): Change temperature to 0.2.  Update tools and system prompt.

2025-08-14  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el (shellcheck): Fix handling of remote files.
